--- a/src/app/admin/order-page/order-page.component.html
+++ b/src/app/admin/order-page/order-page.component.html
@@ -1,16 +1,16 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
-<div style="padding: 16px;">
-  <mat-card style="max-width: 1250px; margin: auto; margin-bottom: 16px;">
+<div style="padding: 16px">
+  <mat-card style="max-width: 1250px; margin: auto; margin-bottom: 16px">
     <a routerLink="/admin" mat-flat-button color="primary">
       <mat-icon>arrow_back_ios</mat-icon>BACK
     </a>
 
-    <label style="font-size: large;"> Order {{ id }}</label>
+    <label style="font-size: large"> Order {{ id }}</label>
     <!-- <mat-form-field appearance="fill" class="background-red"> -->
     <select
       *ngIf="!loading"
-      style="float: right;"
+      style="float: right"
       [ngClass]="{
         red: order.orderStatus == 'RECIEVED',
         yellow: order.orderStatus == 'PRINTING',
@@ -27,10 +27,10 @@
       <option value="DELIVERED">DELIVERED</option>
     </select>
 
-    <p style="float: right; font-size: 18px; margin: 8px;">Order Status:</p>
+    <p style="float: right; font-size: 18px; margin: 8px">Order Status:</p>
     <mat-divider
       [inset]="true"
-      style="margin-bottom: 8px; margin-top: 16px;"
+      style="margin-bottom: 8px; margin-top: 16px"
     ></mat-divider>
     <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 
@@ -38,7 +38,7 @@
       <div class="w3-col s6">
         <mat-card-content>
           <ul>
-            <li style="font-size: large;">
+            <li style="font-size: large">
               <span>{{ order.customerName }}</span>
             </li>
             <li>
@@ -52,9 +52,7 @@
       </div>
       <div class="w3-col s6">
         <ul>
-          <li style="font-size: large;">
-            Shipping Address
-          </li>
+          <li style="font-size: large">Shipping Address</li>
           <li>
             {{ order.shipping.address.address_line_1 }}
           </li>
@@ -74,7 +72,7 @@
       </div>
     </div>
   </mat-card>
-  <mat-card style="max-width: 1250px; margin: auto;">
+  <mat-card style="max-width: 1250px; margin: auto">
     <table
       *ngIf="!loading"
       mat-table
@@ -86,7 +84,7 @@
       <ng-container matColumnDef="imgUrl">
         <th mat-header-cell *matHeaderCellDef>Image Url</th>
         <td mat-cell *matCellDef="let element">
-          <img style="max-height: 56px;" [src]="element.imgUrl" />
+          <img style="max-height: 56px" [src]="element.imgUrl" />
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
@@ -98,7 +96,13 @@
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
-
+      <ng-container matColumnDef="units">
+        <th mat-header-cell *matHeaderCellDef>Units</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.model.units }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
       <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef>Quantity</th>
         <td mat-cell *matCellDef="let element">
